# IneqPy

./: .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO.md  dev-requirements.txt  docker_local.sh  environment36.yml  environment37.yml  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  quickstart.html  requirements-dev.txt  requirements-doc.txt  requirements.txt  run_test.sh  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: codeql-analysis.yml  docs.yml  pypi_wheel.yml  python-package.yml  test.yml
_modules/: index.html
_sources/: index.rst.txt
autoapi/: index.html
doc/: Makefile  index.rst  make.bat
docs/: .buildinfo  Makefile  api.html  generate_docs.py  genindex.html  index.html  index.md  installation.html  make.bat  objects.inv  py-modindex.html  quickstart.html  requirements.txt  search.html  searchindex.js
examples/: alternatives_comparision.py  download_data.md  eusilc.csv  example_analysis.py  how_to_use_api.py  how_to_use_functions.py  litle_example.py  quick_start.ipynb  quick_start.py
ineqpy/: __init__.py  _inequality.py  _statistics.py  _version.py  api.py  ineqpy.py  inequality.py  statistics.py  stats.py  utils.py
pyineq/: __init__.py  pyineq.py
test/: test_api.py  test_statistics.py
tests/: Test Results - Unittests_in_test_statistics_py.html  test_api.py  test_inequality.py  test_moments.ipynb  test_statistics.py
utils/: misc.py  msic.py
(+155 files in other folders)
