[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "deps",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
stubPath = "src/stubs"
# venv = "env367"

reportMissingImports = true
reportMissingTypeStubs = false

pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

